# e39-rpi

./: .gitignore  .gitmodules  README.md  build.gradle  build.gradle.kts  findPi.sh  fridgeBuild.sh  gradle.properties  makeProtos.sh  piDeploy.sh  piLog.sh  piRestart.sh  settings.gradle  settings.gradle.kts
.fleet/: receipt.json
.kotlin/sessions/: .gitignore
autoDiscovery/: build.gradle.kts
autoDiscoveryAnnotations/: build.gradle.kts
autoDiscoveryKsp/: build.gradle.kts
car/: build.gradle.kts
carConduit/: build.gradle.kts
carDefs/: build.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/: build.gradle.kts
driver-griffin-powermate/: CMakeLists.txt  Readme.md
driver-griffin-powermate/device/ledManager/: ILedManager.h
driver-griffin-powermate/device/listener/: IDeviceEventListener.h  LoggingDeviceEventListener.cpp  LoggingDeviceEventListener.h  PulseAudioDeviceEventListener.cpp  PulseAudioDeviceEventListener.h
driver-griffin-powermate/logger/: BaseLogger.cpp  BaseLogger.h  CompositeLogger.cpp  CompositeLogger.h  StdioPrintFLogger.cpp  StdioPrintFLogger.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hmi/: build.gradle.kts
logger/: build.gradle.kts
nm-dbus/: Dockerfile  NOTES.md  buildDbus.sh  generate_network_manager_dbus.sh
pwric/: pwric.ino
pwric/sketch_aug26a/: sketch_aug26a.ino
runConfigurations/: e39-rpi [run].run.xml  rpi debug.run.xml
systemImage/builder/: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  clean.sh  combine.sh  config.conf  configure.sh  e39-deps.control  install-e39.sh  (+7 more)
(+1028 files in other folders)
